gakuseisyousaiにリンクした 情報のリンクもできた 履修科目も表示することができた

--- a/tannninn/gakuseijyouhousyousai.html
+++ b/tannninn/gakuseijyouhousyousai.html
@@ -303,9 +303,9 @@
           totalAttendance: 95,
           absentCount: 5,
           subjects: [
-            { name: 'データ構造とアルゴリズム', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: 'オブジェクト指向プログラミング', absent: 0, tardy: 1, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: 'Webアプリケーション開発', absent: 2, tardy: 0, earlyLeave: 1, suspension: 0, detailLink: '#' }
+            { name: 'データ構造とアルゴリズム', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0, soa:0, detailLink: '#' },
+            { name: 'オブジェクト指向プログラミング', absent: 0, tardy: 1, earlyLeave: 0, suspension: 0, soa:0, detailLink: '#' },
+            { name: 'Webアプリケーション開発', absent: 2, tardy: 0, earlyLeave: 1, suspension: 0, soa:0, detailLink: '#' }
           ]
         },
         {
@@ -320,8 +320,8 @@
           totalAttendance: 88,
           absentCount: 12,
           subjects: [
-            { name: '建築構造力学', absent: 3, tardy: 2, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: '建築史', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '建築構造力学', absent: 3, tardy: 2, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' },
+            { name: '建築史', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -336,8 +336,8 @@
           totalAttendance: 98,
           absentCount: 2,
           subjects: [
-            { name: '情報科学基礎', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: 'プログラミング入門', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '情報科学基礎', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' },
+            { name: 'プログラミング入門', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -352,8 +352,8 @@
           totalAttendance: 92,
           absentCount: 8,
           subjects: [
-            { name: '電気回路', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: '電子デバイス', absent: 0, tardy: 1, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '電気回路', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' },
+            { name: '電子デバイス', absent: 0, tardy: 1, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -368,8 +368,8 @@
           totalAttendance: 90,
           absentCount: 10,
           subjects: [
-            { name: '機械力学', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: '熱機関', absent: 1, tardy: 1, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '機械力学', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0,soa: 0, detailLink: '#' },
+            { name: '熱機関', absent: 1, tardy: 1, earlyLeave: 0, suspension: 0,soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -384,8 +384,8 @@
           totalAttendance: 96,
           absentCount: 4,
           subjects: [
-            { name: '線形代数', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: 'Pythonプログラミング', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '線形代数', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0,soa: 0, detailLink: '#' },
+            { name: 'Pythonプログラミング', absent: 1, tardy: 0, earlyLeave: 0, suspension: 0,soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -400,8 +400,8 @@
           totalAttendance: 99,
           absentCount: 1,
           subjects: [
-            { name: '建築製図', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: '都市計画論', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '建築製図', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' },
+            { name: '都市計画論', absent: 0, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' }
           ]
         },
         {
@@ -416,8 +416,8 @@
           totalAttendance: 85,
           absentCount: 15,
           subjects: [
-            { name: '信号処理', absent: 3, tardy: 1, earlyLeave: 0, suspension: 0, detailLink: '#' },
-            { name: '通信工学', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0, detailLink: '#' }
+            { name: '信号処理', absent: 3, tardy: 1, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' },
+            { name: '通信工学', absent: 2, tardy: 0, earlyLeave: 0, suspension: 0, soa: 0, detailLink: '#' }
           ]
         }
       ];
@@ -469,6 +469,7 @@
               row.insertCell().textContent = subject.tardy;
               row.insertCell().textContent = subject.earlyLeave;
               row.insertCell().textContent = subject.suspension;
+              row.insertCell().textContent = subject.soa;
               const detailCell = row.insertCell();
               const detailLink = document.createElement('a');
               detailLink.href = subject.detailLink; // 実際の詳細リンクを設定
